Multires: Expand Face Set operators don't work on some objects #107093

Closed
opened 2023-04-18 17:42:30 +02:00 by Julien Kaspar · 1 comment
Member

System Information
Operating system: Linux-6.2.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits, X11 UI
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-18 15:15, hash: 5bb3a3f1575d
Worked: (newest version of Blender that worked as expected)

Short description of error
I encountered this a few times. The best way to reliably reproduce this is with the Monkey primitive.
If you try to use any Expand Face Set operators from the Face Set Menu or via the shortcut Shift W, nothing happens.
Any other primitive works fine or when disabling the modifier.

Exact steps for others to reproduce the error

  • Add a monkey primitive mesh
  • Add a multires modifier and subdivide
  • Enter sculpt mode
  • Use Shift W on the surface
  • Try the same when disabling the modifier or on another primitive object
**System Information** Operating system: Linux-6.2.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits, X11 UI Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-18 15:15, hash: `5bb3a3f1575d` Worked: (newest version of Blender that worked as expected) **Short description of error** I encountered this a few times. The best way to reliably reproduce this is with the Monkey primitive. If you try to use any Expand Face Set operators from the Face Set Menu or via the shortcut `Shift W`, nothing happens. Any other primitive works fine or when disabling the modifier. **Exact steps for others to reproduce the error** - Add a monkey primitive mesh - Add a multires modifier and subdivide - Enter sculpt mode - Use `Shift W` on the surface - Try the same when disabling the modifier or on another primitive object
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-18 17:42:31 +02:00
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
label 2023-04-18 19:35:44 +02:00
Member

Can confirm

Can confirm
Philipp Oeser added
Module
Sculpt, Paint & Texture
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-19 10:25:19 +02:00
Iliya Katushenock removed the
Interest
Sculpt, Paint & Texture
label 2023-04-19 13:19:01 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-19 21:59:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107093
No description provided.