Sculpt: Fix #107093: expand helper function not specialized to pbvh

sculpt_expand_is_face_in_active_component wasn't specialzied for
the different PBVH types.